// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config Angular2 Todo 1`] = `
Config {
  "components": Array [
    Object {
      "patterns": Array [
        "**/*.ts",
        "**/*.js",
        "**/*.jsx",
        "**/*.tsx",
      ],
      "type": "Component",
    },
  ],
  "excludePatterns": Array [
    "node_modules/**",
    "test/**",
    "**/*.test.*",
    "**/*.spec.*",
  ],
  "extensions": Array [
    ".js",
    ".ts",
    ".jsx",
    ".tsx",
  ],
  "outputs": Array [
    Object {},
  ],
  "patterns": Array [
    "**/*.ts",
    "**/*.js",
    "**/*.jsx",
    "**/*.tsx",
  ],
}
`;

exports[`Config Express 1`] = `
Config {
  "components": Array [
    Object {
      "patterns": Array [
        "**/*.ts",
        "**/*.js",
        "**/*.jsx",
        "**/*.tsx",
      ],
      "type": "Component",
    },
  ],
  "excludePatterns": Array [],
  "extensions": Array [
    ".js",
    ".ts",
    ".jsx",
    ".tsx",
  ],
  "outputs": Array [
    Object {
      "path": Array [
        "express.svg",
      ],
    },
  ],
  "patterns": Array [
    "**/*.ts",
    "**/*.js",
    "**/*.jsx",
    "**/*.tsx",
  ],
}
`;

exports[`Config Sample 1`] = `
Config {
  "components": Array [
    Object {
      "format": "full",
      "patterns": Array [
        "./main.ts",
      ],
      "type": "App",
    },
    Object {
      "patterns": Array [
        "**/*.view.**",
      ],
      "type": "View",
    },
    Object {
      "patterns": Array [
        "**/**component.**",
      ],
      "type": "Component",
    },
    Object {
      "patterns": Array [
        "**/controllers/*",
      ],
      "type": "Controller",
    },
    Object {
      "patterns": Array [
        "**/models/*",
      ],
      "type": "Model",
    },
  ],
  "excludePatterns": Array [],
  "extensions": Array [
    ".js",
    ".ts",
    ".jsx",
    ".tsx",
  ],
  "outputs": Array [
    Object {
      "groups": Array [
        Object {
          "components": Array [
            "View",
            "Controller",
          ],
          "type": "Main",
        },
        Object {
          "components": Array [
            "Component",
            "Model",
          ],
          "type": "Base",
        },
        Object {
          "patterns": Array [
            "**/*",
          ],
        },
      ],
      "path": Array [
        "./docs/architecture.puml",
      ],
    },
    Object {
      "path": "./docs/architecture.svg",
    },
  ],
  "patterns": Array [
    "./main.ts",
    "**/*.view.**",
    "**/**component.**",
    "**/controllers/*",
    "**/models/*",
  ],
}
`;
